Added import package as utility
To support directory structure for theses, the import package is
included.

--- a/tufte-thesis.cls
+++ b/tufte-thesis.cls
@@ -240,3 +240,10 @@
 
 \PassOptionsToPackage { inline } { enumitem }
 \RequirePackage { enumitem }
+
+
+%%%%%%%%%%%%%
+% Utilities %
+%%%%%%%%%%%%%
+
+\RequirePackage { import }
